# signalfx-php-tracing

./: .env.circleci  .gitignore  .gitlab-ci.yml  .phpcs.xml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.BSD3  Makefile  NOTICE  README.md  RELEASING.md  composer.json  config.m4  datadog-setup.php  dd-library-php-setup.php  docker-compose.yml  local-build.sh  package.xml  php_ddtrace.h  phpcs.xml  phpstan.ddtrace.neon  phpstan.neon  phpunit.xml  signalfx-setup.php
.circleci/: config.yml
bridge/: _files.php  _files_integrations.php  _files_internal.php  _files_tracer.php  autoload.php  configuration.php  dd_init.php  dd_register_optional_deps_autoloader.php  dd_require_all.php  dd_required_deps_autoloader.php  functions.php
dockerfiles/: agent-test.yaml
dockerfiles/compile_extension/: Makefile  build-dd-trace-php
dockerfiles/release-candidates/: Dockerfile_pecl_alpine_56  Dockerfile_pecl_amazon_55  Dockerfile_pecl_amazon_72  docker-compose.yml
docs/: readme.md
examples/nginx-php-fpm/: www.conf
ext/: auto_flush.c  comms_php.c  comms_php.h  coms.c  configuration.h  ddtrace.c  ddtrace.h  handlers_http.h  logging.h  serializer.c  serializer.h  span.c  startup_logging.c  version.h
package/: ddtrace.ini.example  post-install.sh  signalfx-tracing.ini.example
playground/: start-server.sh
profiling/: Cargo.toml
src/: dd-doctor.php
tests/: WebServer.php  composer.json  internal-api-stress-test.php  phpunit.xml
zend_abstract_interface/: CMakeLists.txt
zend_abstract_interface/signalfx/: CMakeLists.txt  json_writer.c  json_writer.h  signalfx.c  signalfx.h
(+758 files in other folders)
